Updated index.html and style.css  with contact section modified

--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
             <img src="anjana.png" alt="Profile Image" class="circle-image">
         </div>
         <div class="content">
-            <h1>Hi!</h1>
-            <h2>I am Anjana Nittur</h2>
-            <p>A passionate data enthusiast, currently pursuing my Master of Science in Applied Data Analytics at Boston University with hands-on experience in predictive analytics, data visualization, and ML.</p>
+            <h1><span class="typing-effect">Hi! I am Anjana Nittur</span></h1>
+            <p>Data fascinates me for its ability to uncover patterns and drive impactful decisions. I specialize in transforming complex datasets into actionable insights that empower informed choices. With a deep passion for data analytics, I am committed to discovering trends and developing models that solve real-world problems</p>
             <div class="buttons">
                 <a href="Anjana Nittur.pdf" class="btn">Download Resume</a>
                 <a href="index.html#contact" class="btn">Contact</a>
@@ -54,12 +53,12 @@
             <div class="education-card">
                 <span class="year">2023-2025</span>
                 <h3>Master of Science in Applied Data Analytics</h3>
-                <p>Boston University</p>
+                <h4>Boston University</h4>
             </div>
             <div class="education-card">
                 <span class="year">2017-2021</span>
                 <h3>Bachelor of Engineering in Automation & Robotics</h3>
-                <p>KLE Technological University</p>
+                <h4>KLE Technological University</h4>
             </div>
         </div>
     </section>
@@ -169,7 +168,7 @@
             </div>
             <div class="project-card">
                 <img src="ad.webp" alt="Project Image">
-                <h3>Ad Track Fraud Detection</h3>
+                <h3>Ad Track Fraud Detection System</h3>
                 <a href="https://github.com/nanjana/Ad-Track-Fraud-Detection-System" class="project-play-link"><i class="fas fa-play"></i></a>
             </div>
         </div>
