Updated education section alignment and project cards

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="menu-close" id="closeMenu">
                 <i class="fas fa-times"></i>
             </div>
-            <ul>
+            <ul>    
                 <li><a href="#home" class="menu-item"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="#education" class="menu-item"><i class="fas fa-graduation-cap"></i> Education</a></li>
                 <li><a href="#experience" class="menu-item"><i class="fas fa-briefcase"></i> Experience</a></li>
@@ -31,98 +31,195 @@
         </div>
     </nav>
 
+<!-- Hero Header Section -->
+<header class="hero-header">
+    <!-- Typing Effect Quote -->
+    <p class="typing-effect">"Data really powers everything that we do" – Jeff Weiner</p>
+
+    <!-- Social Links -->
+    <div class="key-links">
+        <a href="https://www.linkedin.com/in/anjana-nittur/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a href="https://medium.com/@anjunittur123" target="_blank"><i class="fab fa-medium"></i> Medium</a>
+        <a href="https://github.com/nanjana" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+        <a href="https://public.tableau.com/app/profile/anjana.nittur" target="_blank"><i class="fas fa-chart-bar"></i> Tableau</a>
+        <a href="https://leetcode.com/u/Anjana_Nittur/" target="_blank"><i class="fas fa-code"></i> LeetCode</a>
+    </div>
+</header>
+
+
     <!-- Main Content Section -->
     <section class="hero-section" id="home">
         <div class="image-container">
-            <img src="anjana.png" alt="Profile Image" class="circle-image">
+            <img src="anjana.JPG" alt="Profile Image" class="circle-image">
         </div>
         <div class="content">
+                <!-- Dynamic One-Liner Text (Using CSS Animation) -->
+                <h2 class="dynamic-title">
+                    <span class="role-text">Data Scientist</span>
+                    <span class="role-text">Data Analyst</span>
+                    <span class="role-text">Data Engineer</span>
+                    <span class="role-text">Machine Learning Engineer</span>
+                </h2>
+
             <h1><span class="typing-effect">Hi! I am Anjana Nittur</span></h1>
-            <p>Data fascinates me for its ability to uncover patterns and drive impactful decisions. I specialize in transforming complex datasets into actionable insights that empower informed choices. With a deep passion for data analytics, I am committed to discovering trends and developing models that solve real-world problems</p>
+            <p class = "justified-text">
+                I specialize in transforming raw datasets into intelligent models that drive real-world impact. With expertise in Machine Learning, AI, and Data Analytics, I create solutions that turn complex information into powerful decisions.</p>
             <div class="buttons">
-                <a href="Anjana Nittur.pdf" class="btn">Download Resume</a>
+                <a href="Anjana_Nittur.pdf" class="btn">Download Resume</a>
                 <a href="index.html#contact" class="btn">Contact</a>
             </div>
         </div>
     </section>
 
     <!-- Education Section -->
-    <section id="education" class="education-skills-section">
+    <section id="education" class="education-section">
         <h2 class="section-title">Education</h2>
         <div class="education-container">
             <div class="education-card">
-                <span class="year">2023-2025</span>
+                <img src="boston_university_1.png" alt="Boston University Logo" class="education-bu-logo">
                 <h3>Master of Science in Applied Data Analytics</h3>
-                <h4>Boston University</h4>
+                <span class="year">September 2023 - January 2025</span>
+                <!-- <h4>Boston University</h4> -->
             </div>
             <div class="education-card">
-                <span class="year">2017-2021</span>
+                <img src="bvb.png" alt="KLE Technological University Logo" class="education-bvb-logo">
                 <h3>Bachelor of Engineering in Automation & Robotics</h3>
-                <h4>KLE Technological University</h4>
+                <span class="year">August 2017 - August 2021</span>
+                <!-- <h4>KLE Technological University</h4> -->
             </div>
         </div>
     </section>
 
-        <h2 class="section-title">Skills</h2>
+    <!-- Skills Section (Separate from Education) -->
+
+    <!-- Skills Section (Separate from Education) -->
+    <section id="skills" class="skills-section">
+        <h2 class="section-title"> Skills</h2>
         <div class="skills-container">
+            <!-- Programming Languages -->
             <div class="skill-card">
-                <img src="R.jpeg" alt="HTML Icon">
+                <img src="R.jpeg" alt="R Icon">
                 <p>R</p>
             </div>
             <div class="skill-card">
-                <img src="python.png" alt="CSS Icon">
+                <img src="python.png" alt="Python Icon">
                 <p>Python</p>
             </div>
             <div class="skill-card">
-                <img src="sql.png" alt="JavaScript Icon">
+                <img src="sql.png" alt="SQL Icon">
                 <p>SQL</p>
             </div>
             <div class="skill-card">
-                <img src="java.png" alt="Python Icon">
+                <img src="java.png" alt="Java Icon">
                 <p>Java</p>
             </div>
             <div class="skill-card">
-                <img src="c++.png" alt="Kafka Icon">
+                <img src="c++.png" alt="C++ Icon">
                 <p>C++</p>
             </div>
             <div class="skill-card">
-                <img src="spark.png" alt="SQL Icon">
+                <img src="scala.png" alt="Scala">
+                <p>Scala</p>
+            </div>
+            
+            <!-- Data Processing & Analytics -->
+            <div class="skill-card">
+                <img src="spark.png" alt="Spark Icon">
                 <p>Apache Spark</p>
             </div>
             <div class="skill-card">
-                <img src="databricks.png" alt="SQL Icon">
+                <img src="databricks.png" alt="Databricks Icon">
                 <p>Databricks</p>
             </div>
             <div class="skill-card">
-                <img src="postgresql.png" alt="SQL Icon">
+                <img src="postgresql.png" alt="PostgreSQL Icon">
                 <p>PostgreSQL</p>
             </div>
             <div class="skill-card">
-                <img src="tableau.png" alt="SQL Icon">
+                <img src="tableau.png" alt="Tableau Icon">
                 <p>Tableau</p>
             </div>
             <div class="skill-card">
-                <img src="powerbi.png" alt="SQL Icon">
+                <img src="powerbi.png" alt="Power BI Icon">
                 <p>Power BI</p>
             </div>
             <div class="skill-card">
-                <img src="kafka.png" alt="SQL Icon">
+                <img src="kafka.png" alt="Kafka Icon">
                 <p>Kafka</p>
             </div>
-            <!-- Add more skill cards as needed -->
+            <div class="skill-card">
+                <img src="airflow.png" alt="Apache Airflow Icon">
+                <p>Apache Airflow</p>
+            </div>
+            
+            <!-- Cloud & Databases -->
+            <div class="skill-card">
+                <img src="aws.png" alt="AWS Icon">
+                <p>AWS</p>
+            </div>
+            <div class="skill-card">
+                <img src="azure.png" alt="Azure Icon">
+                <p>Azure</p>
+            </div>
+            <div class="skill-card">
+                <img src="gcp.png" alt="GCP Icon">
+                <p>Google Cloud</p>
+            </div>
+            <div class="skill-card">
+                <img src="snowflake.png" alt="Snowflake Icon">
+                <p>Snowflake</p>
+            </div>
+            <div class="skill-card">
+                <img src="bigquery.png" alt="BigQuery Icon">
+                <p>BigQuery</p>
+            </div>
+            <div class="skill-card">
+                <img src="mongodb.png" alt="MongoDB Icon">
+                <p>MongoDB</p>
+            </div>
+            <div class="skill-card">
+                <img src="redshift.webp" alt="Redshift Icon">
+                <p>Redshift</p>
+            </div>
+            <div class="skill-card">
+                <img src="hadoop.png" alt="Hadoop Icon">
+                <p>Hadoop</p>
+            </div>
+
+            <!-- BI & Visualization -->
+            <div class="skill-card">
+                <img src="lookerstudio.svg" alt="Looker Studio Icon">
+                <p>Looker Studio</p>
+            </div>
+            <div class="skill-card">
+                <img src="oracle.webp" alt="Oracle Icon">
+                <p>Oracle</p>
+            </div>
+
+            <!-- GIS & ETL Tools -->
+            <div class="skill-card">
+                <img src="qgis.png" alt="QGIS Icon">
+                <p>QGIS</p>
+            </div>
+            <div class="skill-card">
+                <img src="arcgis.png" alt="ArcGIS Icon">
+                <p>ArcGIS</p>
+            </div>
         </div>
     </section>
 
+
+
     <!-- Experience Section (New) -->
     <section id="experience" class="experience-section">
-        <h2 class="section-title">Experience</h2>
+        <h2 class="section-title">Work Experience</h2>
         <div class="timeline">
             <div class="timeline-item">
                 <div class="experience-card">
-                    <h3>Graduate Research Assitant</h3>
+                    <h3>Graduate Data Scientist</h3>
                     <p><a href="https://globslab.org/about/research-assistants/" class="highlight-link">Glob~S</a></p>
                     <p>Boston University, Boston , MA</p>
-                    <span>Sept 2024 - Present</span>
+                    <span>Jan 2024 - Present</span>
                 </div>
             </div>
             <div class="timeline-item">
@@ -133,17 +230,10 @@
                     <span>June 2024 - Aug 2024</span>
                 </div>
             </div>
+
             <div class="timeline-item">
                 <div class="experience-card">
-                    <h3>Graduate Research Assitant</h3>
-                    <p><a href="https://globslab.org/about/research-assistants/" class="highlight-link">Glob~S</a></p>
-                    <p>Boston University, Boston , MA</p>
-                    <span>Jan 2024 - May 2024</span>
-                </div>
-            </div>
-            <div class="timeline-item">
-                <div class="experience-card">
-                    <h3>Design Engineer</h3>
+                    <h3>Data Analyst (Design Engineer) </h3>
                     <p><a href="https://www.actalentservices.com/en" class="highlight-link">Actalent</a></p>
                     <p>Actalent</p>
                     <span>Aug 2021 - Aug 2023</span>
@@ -162,9 +252,9 @@
                 <a href="https://github.com/nanjana/Face-recognition-based-attendance-system" class="project-play-link"><i class="fas fa-play"></i></a>
             </div>
             <div class="project-card">
-                <img src="movie.png" alt="Project Image">
-                <h3>Movie Recommendation System Database</h3>
-                <a href="https://github.com/nanjana/Movie-Recommendation-System-Database" class="project-play-link"><i class="fas fa-play"></i></a>
+                <img src="e-commerce.jpg" alt="Project Image">
+                <h3>Dynamic E-Commerce in PostgreSQL</h3>
+                <a href="https://github.com/nanjana/Dynamic-Pricing-Trends-in-E-Commerce" class="project-play-link"><i class="fas fa-play"></i></a>
             </div>
             <div class="project-card">
                 <img src="ad.webp" alt="Project Image">
@@ -183,7 +273,7 @@
         <div class="publication-container">
             <div class="publication-card">
                 <img src="journal.jpeg" alt="Publication Image">
-                <h3>Modelling and Simulation of Industrial Robot Using Solid Works - July 2021</h3>
+                <h3>Springer | Modelling and Simulation of Industrial Robot Using Solid Works - July 2021</h3>
                 <p>The work presents the evaluation of the motion analysis of the KUKA KR6 industrial robot.</p>
                 <a href="https://link.springer.com/chapter/10.1007/978-981-16-1769-0_16" class="publication-link"><i class="fas fa-book-open"></i> Read More</a>
             </div>
