--- a/projects-page.html
+++ b/projects-page.html
@@ -10,29 +10,55 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 </head>
 <body>
+
     <section id="all-projects" class="projects-section">
         <h2 class="section-title">All Projects</h2>
         <div class="projects-container">
+            
             <div class="project-card">
                 <img src="face.jpeg" alt="Project Image">
                 <h3>Face Recognition based Attendance System</h3>
                 <a href="https://github.com/nanjana/Face-recognition-based-attendance-system" class="project-play-link"><i class="fas fa-play"></i></a>
             </div>
+
             <div class="project-card">
                 <img src="movie.png" alt="Project Image">
                 <h3>Movie Recommendation System Database</h3>
                 <a href="https://github.com/nanjana/Movie-Recommendation-System-Database" class="project-play-link"><i class="fas fa-play"></i></a>
             </div>
+
             <div class="project-card">
                 <img src="ad.webp" alt="Project Image">
                 <h3>Ad Track Fraud Detection</h3>
                 <a href="https://github.com/nanjana/Ad-Track-Fraud-Detection-System" class="project-play-link"><i class="fas fa-play"></i></a>
             </div>
-            <!-- Add more project cards as needed -->
+
+            <div class="project-card">
+                <img src="health.png" alt="Project Image">
+                <h3>Healthcare Robotics Tableau Dashboard</h3>
+                <a href="https://github.com/nanjana/Healthcare-Robotics-Tableau-Dashboard" class="project-play-link"><i class="fas fa-play"></i></a>
+            </div>
+
+            <div class="project-card">
+                <img src="a_b.webp" alt="Project Image">
+                <h3>A/B Testing for Email Marketing</h3>
+                <a href="https://github.com/nanjana/A-B-Testing-for-Email-Marketing" class="project-play-link"><i class="fas fa-play"></i></a>
+            </div>
+
+            <div class="project-card">
+                <img src="time_series.png" alt="Project Image">
+                <h3>Time Series Analysis of S&P</h3>
+                <a href="https://github.com/nanjana/Time-series-analysis-and-forecasting---Power-BI-dashboard" class="project-play-link"><i class="fas fa-play"></i></a>
+            </div>
+        
         </div>
+
         <div class="view-all-container">
             <a href="index.html#projects" class="view-all-btn">Back to Projects <i class="fas fa-arrow-left"></i></a>
         </div>
     </section>
+
 </body>
 </html>
+
+
